Increase nav-link font size to improve readability. Em values used to ensure correct formatting across screensizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,10 @@ body{
     }
 }
 
+.nav-link{
+    font-size: 1.5em;
+}
+
 /*------- Carousel -------*/
 
 .carousel-slide{
@@ -600,9 +604,7 @@ div.menubody.col-12{
     margin: 1%;
     display: inline-block;
     border: 1px solid #777777;
-    position: relative;
-    float: left;
-    
+    position: relative; 
 }
 
 .product img{
